--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,12 +1,12 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 michael:
-  name: Michael Example
+  username: michaelexample
   email: michael@example.com
   password_digest: <%= User.digest('password') %>
   admin: true
 
 archer:
-  name: Sterling Archer
+  username: sterlingarcher
   email: duchess@example.gov
   password_digest: <%= User.digest('password') %>
